--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <center>
         <h1>BATTLE GROUND MOBILE INDIA🎮</h1>
         <h2>Tournament Registration</h2>
-        <h3>Erangel | WareHouse(TDM) | Sanhok</h3>
+        <h3>Erangel | WarHouse(TDM) | Sanhok</h3>
         <img src="WhatsApp Image 2024-05-04 at 2.57.23 PM.jpeg" width="560" height="315"> 
         <p>Battlegrounds Mobile India, or BGMI, is a TPP-FPP survival shooter game in which up to 100 players compete in a battle royale, a type of large-scale last man standing deathmatch in which players compete to be the last one standing. Players can enter the match as individuals or as small groups of up to four.</p>
       </center>
